# torch-pns

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
src/torchpns/: __init__.py  intrinsic.py
tests/: test_intrinsic.py
