[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "torch-pns"
version = "0.0.0"
authors = [
    {name = "Jisoo Song", email = "jeesoo9595@snu.ac.kr"}
]
description = "PyTorch implementation of principal nested spheres (PNS) analysis"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = [
    "LICENSE",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch",
    "scikit-pns",
]

[project.urls]
homepage = "https://pypi.python.org/pypi/torch-pns/"
source = "https://github.com/JSS95/torch-pns"

[project.optional-dependencies]
test = [
    "pytest",
]
dev = [
    "flake8",
    "black",
    "isort",
    "torch-pns[test]"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL",
    "ELLIPSIS",
]
addopts = "--ignore=doc --doctest-modules --import-mode=importlib"